[package]
name = "fmty"
version = "0.1.0"
edition = "2021"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
description = "Composable `core::fmt` utilities."
repository = "https://github.com/nvzqz/fmty"
homepage = "https://github.com/nvzqz/fmty"
documentation = "https://docs.rs/fmty"
categories = ["no-std", "rust-patterns", "value-formatting", "text-processing"]
keywords = ["display", "format", "string", "text", "util"]
readme = "README.md"

# 2021 edition and `core::panic::RefUnwindSafe`.
rust-version = "1.56.0"

[dev-dependencies]
proptest = "1"
test-strategy = "0.3"
